--- a/mobile/app/src/main/res/layout/activity_create_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_create_wallet.xml
@@ -76,7 +76,8 @@
                 android:id="@+id/category_RG"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical"
+                />
 
         </LinearLayout>
 
