--- a/mobile/app/src/main/res/layout/activity_create_wallet.xml
+++ b/mobile/app/src/main/res/layout/activity_create_wallet.xml
@@ -54,8 +54,13 @@
             android:background="@drawable/round_box_button"
             android:padding="20dp"
             android:layout_marginBottom="20dp"
-            android:textColor="@color/light_gray"/>
+            android:textColor="@color/light_gray"
+            android:drawableRight="@drawable/search_icon"/>
 
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragment_container_view_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -63,24 +68,25 @@
             android:background="@drawable/round_box_button"
             android:padding="20dp"
             android:layout_marginBottom="20dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kategoria:"
                 android:textColor="@color/light_gray"
                 android:textAppearance="@style/label"
-                android:textSize="24sp"/>
+                android:textSize="24sp"
+                android:layout_marginBottom="20dp"/>
 
             <RadioGroup
                 android:id="@+id/category_RG"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_gravity="center"
                 />
 
         </LinearLayout>
-
 
         <Button
             android:layout_width="match_parent"
