--- a/mobile/app/src/main/res/values/colors.xml
+++ b/mobile/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="yellow">#F8B500</color>
     <color name="light_gray">#F7F7F7</color>
+    <color name="light_gray_darker">#9A9A9A</color>
     <color name="dark_gray">#444444</color>
     <color name="gray">#606060</color>
     <color name="gray_2">#494949</color>
