--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -32,7 +32,7 @@
             android:src="@drawable/ic_profile_image" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="40dp"
             android:layout_margin="20dp"
@@ -47,9 +47,7 @@
                 android:layout_weight="1"
                 android:textAppearance="@style/label"
                 android:textSize="20sp"
-                android:text="@string/description" />
-
-
+                android:text="@string/login_string" />
             <TextView
                 android:id="@+id/owner_tv"
                 android:layout_width="wrap_content"
@@ -57,7 +55,7 @@
                 android:layout_weight="1"
                 android:textAppearance="@style/label"
                 android:textSize="20sp"
-                android:text="@string/owner" />
+                android:text="@string/email_string" />
 
             <TextView
                 android:id="@+id/number_of_members_tv"
@@ -66,152 +64,17 @@
                 android:layout_weight="1"
                 android:textAppearance="@style/label"
                 android:textSize="20sp"
-                android:text="@string/number_of_members" />
+                android:text="@string/numer_of_wallets_string" />
 
             <TextView
                 android:id="@+id/saldo_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="20dp"
                 android:textAppearance="@style/label"
                 android:textSize="20sp"
                 android:layout_weight="1"
                 android:text="@string/saldo" />
-
-            <TextView
-                android:id="@+id/expanses_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/label"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                android:text="@string/expanses" />
-
-            <TextView
-                android:id="@+id/your_expanses_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/label"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                android:text="@string/your_expanses" />
-
-            <TextView
-                android:id="@+id/balance_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/label"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                android:text="@string/balance" />
-
-            <View
-                android:id="@+id/vector_3"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/v_line_white" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:background="@drawable/bg_round_box_light"
-                android:gravity="center_horizontal"
-                android:paddingVertical="15dp"
-                android:text="@string/open_chat_button"
-                android:textAllCaps="false"
-                android:textColor="@color/yellow"
-                android:textSize="24sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                android:paddingVertical="15dp"
-                android:gravity="center_horizontal"
-                android:layout_marginBottom="20dp">
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_plus">
-                </Button>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:textColor="@color/yellow"
-                    android:text="@string/members"
-                    android:textSize="24sp">
-                </TextView>
-                <Button
-                    android:id="@+id/show_members"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp">
-                </Button>
-
-            </LinearLayout>
-
-
-            <androidx.fragment.app.FragmentContainerView
-                android:id="@+id/fragment_container_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                android:paddingVertical="15dp"
-                android:gravity="center_horizontal"
-                android:layout_marginBottom="20dp">
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/btn_plus">
-                </Button>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:textColor="@color/yellow"
-                    android:text="@string/expenses"
-                    android:textSize="24sp">
-                </TextView>
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/btn_list_closed">
-                </Button>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                android:paddingVertical="15dp"
-                android:gravity="center_horizontal"
-                android:layout_marginBottom="20dp">
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_plus">
-                </Button>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:textColor="@color/yellow"
-                    android:text="@string/shop_lists"
-                    android:textSize="24sp">
-                </TextView>
-                <Button
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/btn_list_closed">
-                </Button>
-            </LinearLayout>
 
             <Button
                 android:id="@+id/statistics_btn"
@@ -219,22 +82,75 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_simple"
-                android:text="@string/statistics"
+                android:text="@string/edit_profile_btn_string"
                 android:textAppearance="@style/button_style"
                 android:textColor="@color/light_gray"
                 app:backgroundTint="@null" />
-
-            <Button
-                android:id="@+id/deleteWallet_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_danger"
-                android:text="@string/deleteWallet"
-                android:textAppearance="@style/button_style"
-                android:textColor="@color/light_gray"
-                app:backgroundTint="@null" />
-
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_margin="20dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@drawable/bg_round_box_light">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_round_box_dark"
+                android:paddingVertical="15dp"
+                android:layout_margin="10dp"
+                android:gravity="center_horizontal"
+                android:layout_marginBottom="20dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
+                    android:textAppearance="@style/label"
+                    android:textColor="@color/yellow"
+                    android:text="@string/notifications_string"
+                    android:textSize="24sp">
+                </TextView>
+                <Button
+                    android:layout_width="30dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/btn_list_closed">
+                </Button>
+            </LinearLayout>
+
+            <View
+                android:id="@+id/vector_3"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/v_line_gradient" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/notification_invitation_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_notification_invitation"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/notification_warning_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:listitem="@layout/item_notification_warning"/>
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/label"
+                android:textColor="@color/yellow"
+                android:text="Przejdź do regulaminu"
+                android:textSize="18sp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
