--- a/mobile/app/src/main/res/layout/activity_edit_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_profile.xml
@@ -63,13 +63,23 @@
             app:backgroundTint="@null"
             tools:ignore="RtlSymmetry" />
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profile_image_iv"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:elevation="5dp"
+            android:padding="20dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            />
+
         <Button
             android:id="@+id/save_change_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_simple"
             android:layout_marginHorizontal="40dp"
-            android:text="@string/save_changes"
+            android:text="@string/save_photo"
             android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
             app:backgroundTint="@null" />
