--- a/mobile/app/src/main/res/layout/item_user_search.xml
+++ b/mobile/app/src/main/res/layout/item_user_search.xml
@@ -6,19 +6,29 @@
     android:gravity="center"
     android:background="@drawable/bg_round_box_dark"
     android:layout_marginVertical="5dp">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image_iv"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:elevation="5dp"
+        android:layout_marginStart="20dp"
+        android:scaleType="centerCrop" />
+
     <TextView
         android:id="@+id/member_name_tv"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:textAppearance="@style/simple_label"
         android:textSize="18sp"
-        android:layout_marginHorizontal="20dp">
+        android:gravity="center_vertical"
+        android:layout_marginHorizontal="10dp">
     </TextView>
 
     <Button
         android:id="@+id/user_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginHorizontal="20dp" />
+        android:layout_marginEnd="10dp" />
 
 </LinearLayout>
