--- a/mobile/app/src/main/res/layout/activity_statistics.xml
+++ b/mobile/app/src/main/res/layout/activity_statistics.xml
@@ -32,42 +32,147 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/v_line_white" />
 
-            <RadioGroup
-                android:id="@+id/period_category_RG"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/day_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/simple_label_bold"
+                    android:textSize="18sp"
+                    android:text="@string/day"
+                    android:textColor="@color/light_gray" />
+
+                <TextView
+                    android:id="@+id/month_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/simple_label_bold"
+                    android:textSize="18sp"
+                    android:text="@string/month"
+                    android:textColor="@color/light_gray" />
+
+                <TextView
+                    android:id="@+id/year_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/simple_label_bold"
+                    android:textSize="18sp"
+                    android:text="@string/year"
+                    android:textColor="@color/light_gray" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/from_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="left"
+                android:textAppearance="@style/simple_label_bold"
+                android:textSize="18sp"
+                android:text="@string/from_label"
+                android:textColor="@color/light_gray" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                android:paddingVertical="15dp"
-                android:gravity="center_horizontal"
-                android:layout_marginBottom="20dp">
-                <Button
-                    android:id="@+id/preview_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/btn_list_opened">
-                </Button>
-                <TextView
-                    android:id="@+id/select_period_tv"
-                    android:layout_width="wrap_content"
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:background="@drawable/bg_round_box_light">
+
+                <Spinner
+                    android:id="@+id/day1"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:textColor="@color/yellow"
-                    android:textSize="24sp">
-                </TextView>
-                <Button
-                    android:id="@+id/next_btn"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/btn_list_opened_rotation">
-                </Button>
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
+
+                <Spinner
+                    android:id="@+id/month1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
+
+                <Spinner
+                    android:id="@+id/year1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/to_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="left"
+                android:textAppearance="@style/simple_label_bold"
+                android:textSize="18sp"
+                android:text="@string/to_label"
+                android:textColor="@color/light_gray" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:background="@drawable/bg_round_box_light">
+
+                <Spinner
+                    android:id="@+id/day2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
+
+                <Spinner
+                    android:id="@+id/month2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
+
+                <Spinner
+                    android:id="@+id/year2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/yellow">
+                </Spinner>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/show_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="20dp"
+                android:background="@drawable/btn_simple"
+                android:text="@string/show_statistics"
+                android:textAppearance="@style/simple_button"
+                android:textColor="@color/light_gray"
+                app:backgroundTint="@null" />
 
 
             <LinearLayout
