--- a/mobile/app/src/main/res/layout/activity_registration.xml
+++ b/mobile/app/src/main/res/layout/activity_registration.xml
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:inputType="text"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
             tools:ignore="LabelFor" />
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
             tools:ignore="LabelFor"  />
@@ -96,7 +96,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
             tools:ignore="LabelFor" />
@@ -115,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
             android:inputType="textPassword"
@@ -136,7 +136,8 @@
             android:id="@+id/statue_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="20dp"
             android:gravity="center_vertical"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -170,7 +171,7 @@
             android:id="@+id/sign_up_reg_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
+            android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="30dp"
             android:text="@string/sign_up"
             android:textAppearance="@style/simple_button"
